Testing Firebase Read/Write
If this works, it'll be DOPE

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>URL Extra Text Display</title>
+    <title>KyleRokuKyu's VRChat Stuff</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -13,24 +13,6 @@
     </style>
 </head>
 <body>
-
-    <h1>Extra Text in URL:</h1>
-    <p id="output">No extra text found.</p>
-
-    <script>
-        // Get the current URL
-        const url = window.location.href;
-        
-        // Extract anything after the ".html"
-        const extraText = window.location.pathname.split("/").pop().split(".html")[1] || "";
-
-        // Display the extra text if there is any
-        if (extraText) {
-            document.getElementById("output").innerText = decodeURIComponent(extraText);
-        } else {
-            document.getElementById("output").innerText = "No extra text found in the URL.";
-        }
-    </script>
-
+Do yo thing, chicken wing.
 </body>
 </html>
