--- a/saveToPastebin.html
+++ b/saveToPastebin.html
@@ -22,11 +22,11 @@
 
             const url = `https://pastebin.com/api/post`;
             const data = new URLSearchParams();
-            data.append('api_dev_key', apiKey);
-            data.append('api_user_name', 'YOUR_USERNAME'); // Replace with your username
-            data.append('api_user_password', 'YOUR_PASSWORD'); // Replace with your password
+            data.append('api_dev_key', LkXb-QfwwzRo95vykxOif9M2J3wXhDOO);
+            data.append('api_user_name', 'KyleRokuKyu'); // Replace with your username
+            data.append('api_user_password', '+m-3KgH8me6(WtV'); // Replace with your password
             data.append('api_option', 'edit');
-            data.append('api_paste_key', pasteKey);
+            data.append('api_paste_key', wzCamRg6);
             data.append('api_paste_data', newContent);
 
             try {
